--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,12 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.12",
     "gsap": "^3.11.0",
-    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.69.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
